# kerrigan

./: .buckconfig  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  README.md  abathur.toml  cortex.toml  creep.toml  drone.toml  hatchery.toml  overseer.toml  prek.toml  reindeer.toml
.claude/: settings.json
.github/workflows/: ci.yml
data/: cortex.db-shm  cortex.db-wal
deploy/dev/: .gitignore  README.md  build.sh  entrypoint.sh  hatchery.toml  overseer.toml
docs/: ROADMAP.md
docs/abathur/: abathur.md  claude-drone.md  creep-cli.md  creep.md  drone-sdk.md  evolution.md  kerrigan-cli.md  native-drone.md  nydus.md  overseer.md  queen.md
docs/evolution/: 2026-04-04-analysis.json
docs/plans/: 2026-03-29-cortex-implementation.md  2026-03-29-overseer-implementation.md  2026-03-30-postgres-objectstore.md  2026-03-31-drones-implementation.md  2026-03-31-queen-drone-integration.md  2026-03-31-queen-implementation.md  2026-04-01-claude-cli-bundling.md  2026-04-01-dev-container.md  2026-04-01-drone-auth-flow.md  2026-04-01-drone-pr-workflow.md  2026-04-01-job-chaining.md  2026-04-01-job-templates-subtypes.md  2026-04-01-nydus-kerrigan-cli.md  2026-04-01-webhook-notifier.md  2026-04-02-creep-cli-and-skill.md  2026-04-02-evolution-chamber-v1.md  2026-04-02-hermetic-toolchain-path.md  2026-04-02-repo-credentials.md  2026-04-03-creep-symbol-index.md  2026-04-03-creep-watcher-debounce.md  2026-04-05-abathur-implementation.md  2026-04-05-orchestrator-integration.md  2026-04-06-drone-bash-reliability.md  2026-04-06-multi-drone-type-concurrency.md  2026-04-06-native-drone-review.md
docs/reviews/: 2026-04-01-pr-14.md  2026-04-02-pr-21.md  2026-04-02-pr-23.md  2026-04-02-pr-28.md  2026-04-06-native-drone-review.md
docs/specs/: 2026-03-29-cortex-design.md  2026-03-29-overseer-design.md  2026-03-30-buildbuddy-remote-execution-design.md  2026-03-30-multi-embedder-design.md  2026-03-30-postgres-objectstore-design.md  2026-03-31-creep-v1-design.md  2026-03-31-drones-design.md  2026-03-31-kerrigan-system-architecture-design.md  2026-03-31-queen-design.md  2026-03-31-queen-drone-integration-design.md  2026-04-05-abathur-design.md  (+24 more)
prelude/: attrs_validators.bzl
rules/: install.bzl
src/abathur/: BUCK  Cargo.toml
src/abathur-cli/: BUCK  Cargo.toml
src/abathur-cli/src/: main.rs
src/abathur/src/: code.rs  config.rs  frontmatter.rs  generator.rs  hash.rs  index.rs  lib.rs  staleness.rs
src/abathur/tests/: integration.rs
src/creep/: BUCK  Cargo.toml  build.rs
src/creep-cli/: BUCK  Cargo.toml  build.rs
src/creep-cli/proto/: creep.proto
src/creep-cli/proto_gen/: creep.v1.rs
src/creep-cli/src/: main.rs
src/creep/proto/: creep.proto
src/creep/proto_gen/: creep.v1.rs
src/creep/src/: config.rs  index.rs  lsp_service.rs  main.rs  parser.rs  service.rs  symbol_index.rs  watcher.rs
src/creep/src/lsp/: client.rs  diagnostics.rs  jsonrpc.rs  manager.rs  mod.rs
src/drones/claude/base/: BUCK  Cargo.toml
src/drones/claude/base/config/: settings.json
src/drones/claude/base/src/: drone.rs  environment.rs  main.rs  stages.rs
src/drones/claude/base/src/config/: .gitignore  CLAUDE.md  settings.json
src/drones/native/: BUCK  Cargo.toml
src/drones/native/src/: cache.rs  config.rs  drone.rs  event_bridge.rs  exit_conditions.rs  git_workflow.rs  health.rs  main.rs  pipeline.rs  prompt.rs  resolve.rs
src/drones/native/src/orchestrator/: executor.rs  mod.rs  orchestrated.rs  plan_parser.rs  scheduler.rs
src/kerrigan/: BUCK  Cargo.toml  install.sh
src/kerrigan/src/: completers.rs  display.rs  main.rs
src/overseer/: BUCK  CLAUDE.md  Cargo.toml
src/overseer/migrations/postgres/: 0001_initial.sql  20260330000000_initial.sql  20260331000000_hatcheries.sql  20260401000000_config_overrides.sql  20260403000000_credentials.sql
src/overseer/migrations/sqlite/: 20260330000000_initial.sql  20260331000000_hatcheries.sql  20260401000000_config_overrides.sql  20260402000000_artifact_type.sql  20260403000000_credentials.sql
src/overseer/src/: config.rs  error.rs  main.rs  storage.rs
src/overseer/src/api/: artifacts.rs  auth.rs  credentials.rs  decisions.rs  hatchery.rs  jobs.rs  memory.rs  mod.rs
src/overseer/src/db/: artifacts.rs  credentials.rs  decisions.rs  hatcheries.rs  jobs.rs  memory.rs  mod.rs  models.rs  postgres.rs  schema.sql  sqlite.rs  tables.rs  trait_def.rs
src/overseer/src/embedding/: mod.rs  stub.rs  voyage.rs
src/overseer/src/mcp/: mod.rs
src/overseer/src/services/: artifacts.rs  auth.rs  credentials.rs  decisions.rs  hatchery.rs  jobs.rs  memory.rs  mod.rs  pipeline.rs
src/queen/: BUCK  Cargo.toml
src/queen/src/: config.rs  main.rs  messages.rs  overseer_client.rs
src/queen/src/actors/: creep_manager.rs  evolution.rs  heartbeat.rs  mod.rs  poller.rs  registrar.rs  supervisor.rs
src/queen/src/notifier/: log.rs  mod.rs  webhook.rs
src/runtime/: BUCK  Cargo.toml
src/runtime/src/: config.rs  event.rs  lib.rs  permission.rs
src/runtime/src/api/: anthropic.rs  error.rs  mod.rs  openai_compat.rs  retry.rs  sse.rs  types.rs
src/runtime/src/conversation/: compaction.rs  integration_test.rs  loop_core.rs  mod.rs  session.rs
src/runtime/src/tools/: agent.rs  bash.rs  external.rs  file_ops.rs  git.rs  mcp.rs  mod.rs  registry.rs  test_runner.rs  types.rs
toolchains/: BUCK  cxx_dist.bzl  rust_dist.bzl
tools/: BUCK  buckify.sh  buckstrap.sh  setup-hooks.sh  toolchain-resolve.sh  update-claude-cli.sh  update-drone-plugins.sh
(+101 files in other folders)
