[package]
name = "abathur-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "abathur"
path = "src/main.rs"

[dependencies]
abathur = { path = "../abathur" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
