[package]
name = "abathur"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
blake3 = "1"
toml = "0.8"
globset = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
