[package]
name = "kerrigan"
version = "0.1.0"
edition = "2024"

[dependencies]
nydus = { path = "../nydus" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
anyhow = "1"
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
owo-colors = "4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
