[package]
name = "overseer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "0.0.1-alpha.7"
libsqlite3-sys = "0.30"
rmcp = { version = "0.16", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zerocopy = { version = "0.8", features = ["derive"] }
anyhow = "1"
base64 = "0.22"
thiserror = "2"
tempfile = "3"
