[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
thiserror = "2"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
futures-util = "0.3"
bytes = "1"
