[package]
name = "native-drone"
version = "0.1.0"
edition = "2024"

[dependencies]
runtime = { path = "../../runtime" }
drone-sdk = { path = "../../drone-sdk" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
globset = "0.4"
ignore = "0.4"
thiserror = "2"
tempfile = "3"
blake3 = "1"
chrono = "0.4"
