[package]
name = "claude-drone"
version = "0.1.0"
edition = "2024"

[dependencies]
drone-sdk = { path = "../../../drone-sdk" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "fs", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
base64 = "0.22.1"
flate2 = "1.1.9"
